--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "export": "next export"
+
   },
+  
+  
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "@radix-ui/react-label": "^2.0.2",
@@ -17,7 +21,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
