--- a/main.yaml
+++ b/main.yaml
@@ -19,6 +19,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Export
+        run: npm run export
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
