--- a/main.yaml
+++ b/main.yaml
@@ -19,12 +19,19 @@ jobs:
       - name: Build
         run: npm run build
 
+  export:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Export
         run: npm run export
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: export
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
