--- a/main.yaml
+++ b/main.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Export
-        run: npm run export
+        run: ./node_modules/.bin/next export
 
   deploy:
     runs-on: ubuntu-latest
