--- a/main.yaml
+++ b/main.yaml
@@ -26,8 +26,16 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+
+      - name: Install Yarn
+        run: npm install -g yarn
+
       - name: Export
-        run: ./node_modules/.bin/next export
+        run: yarn next export
 
   deploy:
     runs-on: ubuntu-latest
