--- a/main.yaml
+++ b/main.yaml
@@ -26,16 +26,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-
-      - name: Install Yarn
-        run: npm install -g yarn
-
       - name: Export
-        run: yarn next export
+        run: ./node_modules/.bin/next export
 
   deploy:
     runs-on: ubuntu-latest
